--- a/docker/desafios/desafio_Node/docker-compose.yaml
+++ b/docker/desafios/desafio_Node/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
   
   nginx:
     image: nginx_desafio
+    depends_on:
+      - node
     build:
       context: ./nginx
     container_name: nginx
