add teste e metodo que procura item por seu id

--- a/fc-ddd-patterns-main/.gitignore
+++ b/fc-ddd-patterns-main/.gitignore
@@ -2,3 +2,7 @@ node_modules
 .vscode
 .swc
 dist
+package-lock.json
+package.json
+fc-ddd-patterns-main/package-lock.json
+fc-ddd-patterns-main/package.json
