--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ FullCycle.pdf
 node_modules
 sys
 docker/mysql
+package-lock.json
+package.json
+fc-ddd-patterns-main/package-lock.json
+fc-ddd-patterns-main/package.json
