--- a/fc-clean-architecture/package.json
+++ b/fc-clean-architecture/package.json
@@ -3,19 +3,26 @@
     "@swc/cli": "^0.1.65",
     "@swc/core": "^1.6.5",
     "@swc/jest": "^0.2.36",
+    "@types/express": "^4.17.21",
     "@types/jest": "^27.5.2",
+    "@types/supertest": "^6.0.2",
     "jest": "^27.5.1",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
     "typescript": "^4.9.5"
   },
   "scripts": {
+    "dev": "nodemon src/infrastructure/api/server.ts",
     "test": "npm run tsc -- --noEmit && jest",
     "tsc": "tsc",
     "teste": "aaa"
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.4",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.17.0",
     "sequelize-typescript": "^2.1.3",
