--- a/fc-clean-architecture/package.json
+++ b/fc-clean-architecture/package.json
@@ -5,6 +5,7 @@
     "@swc/jest": "^0.2.36",
     "@types/express": "^4.17.21",
     "@types/jest": "^27.5.2",
+    "@types/jstoxml": "^2.0.4",
     "@types/supertest": "^6.0.2",
     "jest": "^27.5.1",
     "supertest": "^7.0.0",
@@ -22,11 +23,14 @@
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsontoxml": "^1.0.1",
+    "jstoxml": "^5.0.2",
     "nodemon": "^3.1.4",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.17.0",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^1.4.0"
   }
 }
